test/week7/invalid/test5_missing_paren_and_semicolon.c
int total = 0;
int i = 4;
while (i > 0 {
    total = total + i
    i = i - 1;
}
if (total > 3) {
    total = total + 100;
}
